# RoboSONE

./: README.md  RoboSONE.cabal
app/: Main.hs
src/: GridConfig.JSON  GridInterpreter.hs  RoboInterpreter.hs  RoboNames  UI.hs  r1.rbt  r1.rbt.conf  result.gi
